--- a/ansible/roles/ruby/templates/rbenv_system.sh.j2
+++ b/ansible/roles/ruby/templates/rbenv_system.sh.j2
@@ -1,2 +1,3 @@
-echo 'export PATH="$HOME/.rbenv/bin:$PATH"' >> ~/.bash_profile
+export RBENV_ROOT="/usr/local/rbenv"
+export PATH="${RBENV_ROOT}/bin:${PATH}"
 eval "$(rbenv init -)"
